# mcp_learn

./: .gitignore  1.py  2.py  4.py  README.md  dis_version.yaml  inspetion_h3c.yaml  inspetion_hardware_info.py  inspetion_other_info.yaml  start_vmrest.bat  tips.txt
chat_framework/: .gitignore  env.sh  main.py  tips.txt
fetch_time/: .env  README.md  (+2 more)
libvirt_server/: .env  README.md  ansible.cfg  cli.py  console_exec.expect  main.py  pyproject.toml  server.py  tips.md  tips.txt  unset_env.sh
libvirt_server/handlers/: console.py  host.py  net.py  pool.py  vm.py  vol.py
libvirt_server/inventory/: hosts
libvirt_server/playbooks/: setup_kvm.yaml
libvirt_server/utils/: __init__.py  connect.py  console.py  details.py  env_utils.py  functions.py  host_manager.py  libvirt_server.py  net_manager.py  pool_manager.py  vm_manager.py  vol_manager.py
mcp-kubernetes/: .env  README.md  main.py  pyproject.toml  questions.txt  server.py  test.py
mcp-kubernetes/.kube/: config
mcp-kubernetes/template/: __init__.py  template_configmaps.py  template_deployments.py  template_namespaces.py  template_pods.py  template_serviceaccounts.py  template_services.py  wrapper.py
mcp-kubernetes/test/: 1.py  2.py  3.py
mcp-kubernetes/utils/: __init__.py  debug.py  env_utils.py  functions.py  kubernetes_manager.py  logger.py  port_forward.py  resources_apply_v1.py  resources_create_v1.py  resources_delete.py  resources_delete_v1.py  resources_describe_v1.py  resources_get.py  resources_get_v1.py  resources_list_v1.py  resources_logs_v1.py  resources_patch_v1.py  resources_scale_v1.py
(+66 files in other folders)
