[project]
name = "mcp-kubernetes"
version = "0.1.0"
description = "A simple MCP Server for kubernetes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.9.4",
    "openai>=1.88.0",
    "openai-agents>=0.0.19",
    "prompt-toolkit>=3.0.51",
    "pyyaml>=6.0.2",
]
